[gd_scene load_steps=2 format=3 uid="uid://jdba67lbpoih"]

[ext_resource type="Script" path="res://scenes/screens/end_scene.gd" id="1_kbh2t"]

[node name="EndScene" type="CanvasLayer"]
script = ExtResource("1_kbh2t")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 125)
layout_mode = 2

[node name="YouDiedText" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "YOU DIED"
horizontal_alignment = 1

[node name="CongratulationsText" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Congratulations!
You escaped the cave"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Retry"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
